<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.youdrop.youdrop.views.sections.AddFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="10dip"
            style="@style/TransparentButton"
            android:drawableTop="@mipmap/foto"
            android:text="@string/type_photo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/video"
            style="@style/TransparentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawableTop="@mipmap/video"
            android:padding="10dip"
            android:text="@string/type_video" />

        <Button
            android:id="@+id/videogallery"
            style="@style/TransparentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawableTop="@mipmap/galeria"
            android:enabled="true"
            android:padding="10dip"
            android:text="@string/type_galery_video" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/audio"
            style="@style/TransparentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawableTop="@mipmap/audio"
            android:enabled="false"
            android:padding="10dip"
            android:text="@string/type_audio" />

    </LinearLayout>

</LinearLayout>
