<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.youdrop.youdrop.views.publications.PublicationActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/avatarChange"
            android:layout_width="82dip"
            android:layout_height="82dip"
            android:layout_margin="20dip"
            tools:src="@drawable/amigos"
            android:padding="10dip"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="1dp"
            app:civ_shadow="true"
            app:civ_shadow_radius="10"
            app:civ_shadow_color="@color/colorPrimary"
             />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_marginRight="20dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dip"
                android:layout_weight="1"
                android:textSize="10dip"
                android:textStyle="bold"
                tools:text="Nickname" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dip"
                android:textSize="14dip"
                android:layout_weight="1"
                tools:text="Name" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dip"
                android:layout_weight="1"
                android:textSize="10dip"
                tools:text="Descripcio de gustos..." />

        </LinearLayout>

        <ImageButton
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:padding="8dp"
            app:srcCompat="@drawable/editar" />

        <ImageButton
            android:id="@+id/logOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:padding="8dp"
            app:srcCompat="@drawable/logout" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="10dip"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/num_publications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="2dip"
            android:textSize="15dip"
            android:textStyle="bold"
            android:textColor="@color/gray"
            tools:text="87" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publications"
            android:textColor="@color/gray"
            android:textSize="10dip" />

        <TextView
            android:id="@+id/num_active_publications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dip"
            android:paddingRight="2dip"
            android:textSize="15dip"
            android:textStyle="bold"
            android:textColor="@color/gray"
            tools:text="12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active_publications"
            android:textColor="@color/gray"
            android:textSize="10dip" />

        <TextView
            android:id="@+id/num_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dip"
            android:paddingRight="2dip"
            android:textSize="15dip"
            android:textStyle="bold"
            android:textColor="@color/gray"
            tools:text="12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/likes"
            android:textSize="10dip" />
    </LinearLayout>

        <ImageButton
            android:id="@+id/addFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@color/transparent"
            android:padding="8dp"
            app:srcCompat="@drawable/foto" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/commentList"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </android.support.v7.widget.RecyclerView>
</LinearLayout>
    </android.support.v4.widget.NestedScrollView>
